# rit

./: Cargo.toml  README.md
docs/: README.md  SUMMARY.md  finish-init-command-implementation.md  implement-gitrepository-create.md  step-1.md  step-10.md  step-11.md  step-2.md  step-3.md  step-4.md  step-5.md  step-6.md  step-7.md  step-8.md  step-9.md
docs/git-cat-file-command/: add-blobobject.md  add-objectparseerror.md  create-a-git-object-module.md  finish-cat-file-command-implementation.md  implement-read-function.md  the-hash-object-command.md  update-argument-parser.md
docs/git-init-command/: a-better-approach-to-handling-errors.md  add-find-function-to-gitrepository.md  create-a-gitconfig-struct.md  create-a-gitrepository-struct.md  implement-git-init-command.md  lets-add-some-integration-tests.md  refactor.md
docs/lets-start/: readme.md
docs/reading-commit-history/: a-few-more-refactors-and-fixes.md  add-checkout-command.md  add-log-command.md  add-ls-tree.md  parsing-commits.md  start-parsing-tree-objects.md
docs/refactor/: add-compressedgitobject.md  add-serializedgitobject.md  change-gitobject-to-an-enum.md  move-each-git-object-to-separate-file.md  move-read-and-write-objects-to-repository-module.md  split-error-types.md  split-git_object-module.md
docs/refs-tags-and-branches/: implement-show-ref-command.md  implement-tag-command.md  improve-find_object.md
src/: cli.rs  directory_manager.rs  error.rs  executer.rs  git_config.rs  git_object.rs  lib.rs  main.rs  repository.rs
tests/: directory_manager.rs  repository.rs  test_utils.rs
(+19 files in other folders)
