[package]
name = "rit"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rit"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["cargo"] }
colored = "2.0.4"
configparser = "3.0.2"
flate2 = "1.0.28"
sha1_smol = { version = "1.0.0", features = ["std"] }
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4"] }
hex = "0.4.3"
